RESOLVED FIXED287320
Regression(285464@main) Fix bad deref() function for AudioContext, which was causing leaks
https://bugs.webkit.org/show_bug.cgi?id=287320
Summary Regression(285464@main) Fix bad deref() function for AudioContext, which was ...
Chris Dumez
Reported 2025-02-07 21:05:33 PST
Fix bad deref() function for AudioContext, which was causing leaks.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-07 21:06:00 PST
Chris Dumez
Comment 2 2025-02-07 21:06:56 PST
EWS
Comment 3 2025-02-07 21:13:59 PST
Committed 290075@main (588703fa7df3): <https://commits.webkit.org/290075@main> Reviewed commits have been landed. Closing PR #40274 and removing active labels.
EWS
Comment 4 2025-02-10 11:04:48 PST
Committed 289651.74@safari-7621-branch (ad4b16bedafb): <https://commits.webkit.org/289651.74@safari-7621-branch> Reviewed commits have been landed. Closing PR #2551 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.