Regression(285464@main) Fix bad deref() function for AudioContext, which was causing leaks https://bugs.webkit.org/show_bug.cgi?id=287320 rdar://144428924

Reviewed by Jean-Yves Avenard.

* Source/WebCore/Modules/webaudio/AudioContext.h:

Canonical link: https://commits.webkit.org/290075@main